add sidecar name

--- a/network/benchmarks/benchmark-a3.yaml
+++ b/network/benchmarks/benchmark-a3.yaml
@@ -40,6 +40,10 @@ spec:
                  readOnly: true
                - name: tcpx-socket
                  mountPath: /run/tcpx
+               - name: sys
+                 mountPath: /hostsysfs
+               - name: proc-sys
+                 mountPath: /hostprocsysfs
               env:
                - name: LD_LIBRARY_PATH
                  value: /usr/local/nvidia/lib64
@@ -61,6 +65,8 @@ spec:
               # Force python to not buffer output and write directly to stdout, so we can view training logs via `kubectl logs`.
               - name: PYTHONUNBUFFERED
                 value: "0"
+              - name: OMP_NUM_THREADS
+                value: "1"
               - name: LD_LIBRARY_PATH
                 value: /usr/local/nvidia/lib64
               resources:
@@ -83,15 +89,18 @@ spec:
               volumeMounts:
                - name: tcpx-socket
                  mountPath: /tmp
-               - name: config-volume
-                 mountPath: /configs
+               - name: libraries
+                 mountPath: /usr/local/nvidia/lib64
+                 readOnly: true
             volumes:
-            - name: config-volume
-              configMap:
-               name: nccl-configmap
-               defaultMode: 0777
             - name: libraries
               hostPath:
                path: /home/kubernetes/bin/nvidia/lib64
             - name: tcpx-socket
               emptyDir: {}
+            - name: sys
+              hostPath:
+               path: /sys
+            - name: proc-sys
+              hostPath:
+                path: /proc/sys
