--- a/network/benchmarks/Dockerfile
+++ b/network/benchmarks/Dockerfile
@@ -1,4 +1,4 @@
-FROM pytorch/pytorch:latest
-RUN pip install tqdm
+FROM nvcr.io/nvidia/pytorch:23.11-py3
+#RUN pip install tqdm
 COPY all_reduce_bench.py all_reduce_bench.py
 CMD printenv
