--- a/network/benchmarks/benchmark-a3.yaml
+++ b/network/benchmarks/benchmark-a3.yaml
@@ -48,10 +48,15 @@ spec:
                - name: LD_LIBRARY_PATH
                  value: /usr/local/nvidia/lib64
             - name: pytorch
-              image: us-east1-docker.pkg.dev/rick-vertex-ai/gke-llm/torch-benchmark:latest
+              image: us-east1-docker.pkg.dev/northam-ce-mlai-tpu/gke-llm/torch-benchmark:latest
               ports:
               - containerPort: 3389
               securityContext:
+                capabilities:
+                  add:
+                   - SYS_ADMIN
+                   - SYS_PTRACE
+                   - IPC_LOCK
                 privileged: true
               env:
               - name: MASTER_ADDR
@@ -63,12 +68,58 @@ spec:
                   fieldRef:
                     fieldPath: metadata.annotations['batch.kubernetes.io/job-completion-index']
               # Force python to not buffer output and write directly to stdout, so we can view training logs via `kubectl logs`.
+              - name: NNODES
+                value: "2"
+              - name: NODE_RANK
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.annotations['batch.kubernetes.io/job-completion-index']
               - name: PYTHONUNBUFFERED
                 value: "0"
               - name: OMP_NUM_THREADS
                 value: "1"
               - name: LD_LIBRARY_PATH
                 value: /usr/local/nvidia/lib64
+              - name: NCCL_ALGO
+                value: Ring
+              - name: NCCL_CROSS_NIC
+                value: "0"
+              - name: NCCL_DYNAMIC_CHUNK_SIZE
+                value: "524288"
+              - name: NCCL_GPUDIRECTTCPX_CTRL_DEV
+                value: eth0
+              - name: NCCL_GPUDIRECTTCPX_FORCE_ACK
+                value: "0"
+              - name: NCCL_GPUDIRECTTCPX_PROGRAM_FLOW_STEERING_WAIT_MICROS
+                value: "1000000"
+              - name: NCCL_GPUDIRECTTCPX_RX_BINDINGS
+                value: eth1:22-35,126-139;eth2:22-35,126-139;eth3:74-87,178-191;eth4:74-87,178-191
+              - name: NCCL_GPUDIRECTTCPX_SOCKET_IFNAME
+                value: eth1,eth2,eth3,eth4
+              - name: NCCL_GPUDIRECTTCPX_TX_BINDINGS
+                value: eth1:8-21,112-125;eth2:8-21,112-125;eth3:60-73,164-177;eth4:60-73,164-177
+              - name: NCCL_MAX_NCHANNELS
+                value: "12"
+              - name: NCCL_MIN_NCHANNELS
+                value: "12"
+              - name: NCCL_NET_GDR_LEVEL
+                value: PIX
+              - name: NCCL_NSOCKS_PERTHREAD
+                value: "4"
+              - name: NCCL_P2P_NET_CHUNKSIZE
+                value: "524288"
+              - name: NCCL_P2P_NVL_CHUNKSIZE
+                value: "1.048576e+06"
+              - name: NCCL_P2P_PCI_CHUNKSIZE
+                value: "524288"
+              - name: NCCL_P2P_PXN_LEVEL
+                value: "0"
+              - name: NCCL_PROTO
+                value: Simple
+              - name: NCCL_SOCKET_IFNAME
+                value: eth0
+              - name: NCCL_SOCKET_NTHREADS
+                value: "1"
               resources:
                 limits:
                   nvidia.com/gpu: 8
@@ -78,7 +129,7 @@ spec:
               - |
                 python -u -m torch.distributed.run \
                 --nproc_per_node 8 \
-                --nnodes 2 \
+                --nnodes $NNODES \
                 --rdzv_endpoint $MASTER_ADDR:$MASTER_PORT \
                 --rdzv_backend c10d \
                 --max_restarts 0 \
