--- a/network/benchmarks/resnet/Dockerfile
+++ b/network/benchmarks/resnet/Dockerfile
@@ -1,4 +1,5 @@
-FROM pytorch/pytorch:latest
+#FROM pytorch/pytorch:latest
+FROM nvcr.io/nvidia/pytorch:23.11-py3
 RUN pip install tqdm
 COPY mnist.py mnist.py
 CMD printenv
